# General_projekts_folder

CHelloTriangle/: .gitignore  HelloTriangle  HelloTriangle.cpp  Makefile
CHelloTriangle (copy)/: HelloTriangle.cpp  Makefile
CHelloTriangle (copy)/Header/: HelloTriangleApplication.h
CHelloTriangle (copy)/Source/:  HelloTriangleApplication.cpp
CHelloTriangle/shaders/: shader.frag  shader.vert
CLines/: a.out  main.cpp
CLines/headers/: Lines.h
CSpielzeug/: Main.cpp  a.out
CSpielzeug/Headers/: Spielzeug.h
CSpielzeug/Source/: Spielzeug.cpp
CVulkanlearn/: VulkanTest.cpp
Erben_Strom/: Atomkraft.h  Strom.h  Stromanbieter.h  Windkraft.h  main.cpp
RoemischeZahlen/src/: Roemischezahlen.java
audioPlayer_abtract/: Audioformat.h  MP3_Format.h  Ogg_Format.h  main.cpp
buildingLibrary/: CMakeLists.txt
mysdltest/: hello1_sdl.c
reihe/: Reihe.cpp  Reihe.h  main.cpp
rollenspiel_operatorueberladen/: CMakeLists.txt  Makefile  main.cpp  rollenspiel.cpp  rollenspiel.h
rollenspiel_operatorueberladen/UnixMakefile/: CMakeCache.txt  Makefile  cmake_install.cmake  rollenspielgame
werIstGrößer/: main.cpp
